# isophote-eye-center-detection

./: README.md  contributing_pixel_map.m  conv2pad.m  conv2wrap.m  imderiv.m  imderiv2.m  imderivgauss.m  imderivgauss2.m  imderivgauss3.m  imderivgauss3_get_support.m  imderivgauss_anisotropic.m  isophote_calculation.m  isophote_calculation2.m  isophote_calculation2_get_support.m  isophote_calculation_anisotropic.m  isophote_eye_center_detector.m  isophote_eye_center_detector2.m  isophote_eye_center_detector3.m  run_isophote_eye_detector.m  run_isophote_eye_detector2.m  test_create_circle_image.m  test_imderivgauss.m  test_isophote_eye_center_detector.m
evaluation/: eval_bioid_isophote_eye_center_detector.m  eval_bioid_isophote_eye_center_detector_tweaked.m  eval_yaleb_illumination_isophote_eye_center_detector.m  eval_yaleb_isophote_eye_center_detector.m  eval_yaleb_pose_isophote_eye_center_detector.m  imread_yale.m  read_bioid_eye.m  read_yale_eye.m  read_yale_info.m  writepgm.m
impl/: CMakeLists.txt  EyeCenterDetectorDemo.cpp  build.m  corrfilter1d.cpp  epsilon.hpp  gauss_filter.cpp  gauss_filter.hpp  isophote.cpp  isophote.hpp  isophoteeyedetector.cpp  isophoteeyedetector.hpp  separable_filter.cpp  separable_filter.hpp  test_corrfilter1d.m  test_gauss_filter.m  test_isophote.m  test_separable_filter.m  typetostring.hpp
libs/anigauss/: build.m
libs/pgm/: readpgm.m
libs/steerGauss/: steerGauss2.m
